packages/coln-compiler/test/golden/monoid-glog.output
-- elaborated


-- messages

error[E0316]: cannot use inductively bound variable in a conjunctive context
6 |   mul/unitl : (x : car) -> mul unit x = x
6 |                                         ^
